# vietoris_rips

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  demo.html  readme.md
src/: alpha_shape_complex.h  aspect.h  barcode.h  cech_complex.h  chain_complex_allocator.h  color.h  element.h  element_formatter.h  flag_complex.h  index_sequence_polyfill.h  matrix_formatters.h  ordered_subsequences_view.h  plotter.h  simplicial_complex.h  static_string.h  tty.h  vietoris_rips.cpp  vr_complex.h
